# Cyphr

./: .gitignore  AGENTS.md  LICENSE  LICENSE.md  README.md  SPEC.md  cliff.toml  cyphrpass.go  cyphrpass_test.go  go.mod  go.sum  manifesto.md  netlify.toml  shell.nix  sketch_verifiable_log_model.md  transaction_test.go  treefmt.toml  zami_scratch.md
.github/workflows/: ci.yml  release-go.yml  release-rs.yml  release.yml
docs/: level_2.5.md
docs/adr/: 0001-self-certifying-network-architecture.md
docs/audit/: 2026-02-03-api-coherence-audit.md  2026-02-20-api-coherence-audit.md
docs/charters/: audit-remediation.md  spec-alignment.md
docs/models/: principal-state-model.md  temporally-sparse-merkle-log.md  verifiable-log.md
docs/plans/: audit-remediation.md  constraint-testing.md  cyphr-server.md  implementation-alignment.md  initial-public-release.md  panic-removal.md  scads-proof-verification.md  spec-alignment.md  state-tree-restructuring.md  structural-hardening.md  test-infrastructure-alignment.md
docs/plans/archive/: panic-removal.md  state-tree-restructuring.md
docs/protocol/: constraint_coverage.md
docs/sites/blog/: netlify.toml  site.toml
docs/sites/docs/: .gitignore  netlify.toml  site.toml
docs/sites/theme/: cyphr.css
docs/specs/: authentication.md  consensus.md  principal-lifecycle.md  recovery.md  state-tree.md  transactions.md
go/: README.md  action.go  commit.go  commit_root.go  cyphr.go  cyphrpass.go  cyphrpass_test.go  error.go  fix_push.go  go.mod  go.sum  integration_test.go  key.go  key_test.go  multihash.go  netlify.toml  parsed_coz.go  principal.go  principal_test.go  proof_test.go  state.go  state_test.go  transaction.go  transaction_root.go  verified_tx.go
go/cyphr/: commit.go  key_test.go  parsed_coz.go  principal.go  principal_test.go  state.go  state_test.go  test_helpers_test.go  transaction.go  verified_coz.go
go/cyphrpass/: action.go  commit.go  commit_root.go  cyphrpass.go  e2e_test.go  error.go  golden_test.go  integration_test.go  key.go  multihash.go  parsed_coz.go  principal.go  principal_test.go  state.go  state_test.go  test_helpers_test.go  transaction.go  transaction_root.go  verified_coz.go  verified_tx.go
go/daolfmt/: daolfmt.go  daolfmt_test.go  error.go  go.mod
go/storage/: entry.go  errors.go  export.go  import.go  storage.go  storage_test.go  store.go
go/testfixtures/: decode_test.go  doc.go  e2e_runner.go  golden.go  intent.go  intent_test.go  pool.go  runner.go  testfixtures_test.go
go/tests/: e2e_test.go  golden_test.go
login/: README.md  go.mod  go.sum  login.go  login_test.go
rs/: Cargo.toml  README.md  cyphrpass-keys.json  rust-toolchain.toml  rust_idioms.md  test.rs  test_commit.rs  test_gen.rs  test_json.rs
rs/cyphr/: Cargo.toml  README.md
rs/cyphr-cli/: Cargo.toml  README.md  demo.sh
rs/cyphr-cli/src/: lib.rs  main.rs
rs/cyphr-cli/src/commands/: common.rs  init.rs  inspect.rs  io.rs  key.rs  mod.rs  tx.rs
rs/cyphr-cli/tests/: integration.rs
rs/cyphr-server/: Cargo.toml
rs/cyphr-server/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  routes.rs
rs/cyphr-server/tests/: e2e.rs
rs/cyphr-storage/: Cargo.toml  README.md
rs/cyphr-storage/src/: export.rs  file.rs  import.rs  lib.rs
rs/cyphr-storage/src/blob/: fjall_store.rs  memory.rs  mod.rs  tests.rs
rs/cyphr-storage/src/engine/: error.rs  mod.rs  tests.rs
rs/cyphr-storage/src/index/: memory.rs  mod.rs  tests.rs  types.rs
rs/cyphr-storage/tests/: e2e.rs
rs/cyphr/src/: commit.rs  commit_root.rs  error.rs  key.rs  lib.rs  multihash.rs  parsed_coz.rs  principal.rs  state.rs  transaction.rs
rs/cyphr/tests/: golden_fixtures.rs
rs/cyphrpass/: Cargo.toml
rs/cyphrpass-cli/: Cargo.toml  README.md  demo.sh
rs/cyphrpass-cli/src/: keystore.rs  lib.rs  main.rs
rs/cyphrpass-cli/src/commands/: common.rs  init.rs  inspect.rs  io.rs  key.rs  mod.rs  tx.rs
rs/cyphrpass-cli/tests/: integration.rs
rs/cyphrpass-storage/: Cargo.toml
rs/cyphrpass-storage/src/: export.rs  file.rs  import.rs  lib.rs
rs/cyphrpass-storage/tests/: e2e.rs
rs/cyphrpass/src/: action.rs  commit.rs  commit_root.rs  error.rs  key.rs  lib.rs  multihash.rs  parsed_coz.rs  principal.rs  state.rs  transaction.rs  transaction_root.rs
rs/cyphrpass/tests/: _integration_legacy.rs  golden_fixtures.rs  integration.rs
rs/daolfmt/: Cargo.toml
rs/daolfmt/src/: error.rs  lib.rs  proof.rs  tree.rs
rs/daolfmt/tests/: correctness.rs  proofs.rs
rs/daolfmt/tests/common/: mod.rs
rs/fixture-gen/: Cargo.toml
rs/fixture-gen/src/: main.rs
rs/malt/: Cargo.toml
rs/malt/src/: lib.rs  tree.rs
rs/malt/tests/: correctness.rs  proofs.rs
rs/src/: action.rs  error.rs  key.rs  lib.rs  principal.rs  state.rs  transaction.rs
rs/test-fixtures/: Cargo.toml
rs/test-fixtures/src/: error.rs  golden.rs  intent.rs  lib.rs  pool.rs
rs/tests/: integration.rs
test_vectors/: KNOWN_ISSUES.md  README.md
test_vectors/actions/: recording.json
test_vectors/edge_cases/: ordering.json
test_vectors/errors/: conditions.json
test_vectors/genesis/: explicit.json  implicit.json
test_vectors/keys/: pool.json
test_vectors/state/: computation.json
test_vectors/transactions/: algorithm_diversity.json  multi_key.json  mutations.json
tests/: README.md
tests/e2e/: README.md  edge_cases.toml  error_conditions.toml  genesis_load.toml  multihash_coherence.toml  round_trip.toml
tests/e2e/intents/: round_trip.toml
tests/golden/: smoke.json  state_computation.json
tests/golden/actions/: action_changes_ps.json  action_updates_last_used.json  level_upgrades_to_4.json  multiple_actions_sorted.json  single_action_promotes_ds.json
tests/golden/algorithm_diversity/: ed25519_account_adds_es256_key.json  es384_account_adds_es256_key.json
tests/golden/edge_cases/: action_after_key_add.json  (+3 more)
tests/intents/: actions.toml  algorithm_diversity.toml  authentication_constraints.toml  data_action_constraints.toml  edge_cases.toml  errors.toml  multi_key.toml  mutations.toml  smoke.toml  state_computation.toml  structural_constraints.toml
tests/keys/: pool.toml
(+59 files in other folders)
