[workspace]
members  = ["cyphrpass", "cyphrpass-storage"]
resolver = "2"

[workspace.package]
edition      = "2024"
repository   = "https://github.com/Cyphrme/Cyphrpass"
rust-version = "1.85"

[workspace.dependencies]
# Core crypto - from coz-rs (re-exports digest, sha2)
coz = { package = "coz-rs", path = "../coz-rust/coz-rs" }

# Serialization
indexmap   = { version = "2", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
