[workspace]
members = [
  "cyphr",
  "cyphr-storage",
  "cyphr-server",
  "cyphr-cli",
  "test-fixtures",
  "fixture-gen",
]
resolver = "2"

[workspace.package]
edition      = "2024"
homepage     = "https://cyphr.me"
license-file = "../LICENSE"
repository   = "https://github.com/Cyphrme/Cyphr"
rust-version = "1.85"

[workspace.dependencies]
# Core crypto - from coz-rs (re-exports digest, sha2)
coz = { package = "coz-rs", version = "0.4.1" }

# Storage
blake3 = "1"
fjall  = "2"

# Serialization
base64ct   = { version = "1", features = ["alloc"] }
indexmap   = { version = "2", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order"] }
toml       = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Server
axum               = "0.8"
figment            = { version = "0.10", features = ["toml", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http         = { version = "0.6", features = ["trace"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid               = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
