[package]
description            = "Reference CLI for the Cyphr identity protocol"
edition.workspace      = true
name                   = "cyphr-cli"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[[bin]]
name = "cyphr"
path = "src/main.rs"

[dependencies]
base64ct.workspace   = true
clap.workspace       = true
coz.workspace        = true
cyphr                = { path = "../cyphr" }
cyphr-storage        = { path = "../cyphr-storage" }
indexmap             = { version = "2", features = ["serde"] }
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true

[dev-dependencies]
serde_json.workspace = true
tempfile             = "3"
