[package]
categories             = ["command-line-utilities", "cryptography"]
description            = "Reference CLI for the Cyphr identity protocol"
documentation          = "https://docs.rs/cyphr-cli"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["cli", "identity", "authentication", "cryptography"]
license-file.workspace = true
name                   = "cyphr-cli"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[[bin]]
name = "cyphr"
path = "src/main.rs"

[dependencies]
base64ct.workspace   = true
clap.workspace       = true
coz.workspace        = true
cyphr                = { path = "../cyphr", version = "0.1.0" }
cyphr-storage        = { path = "../cyphr-storage", version = "0.1.0" }
indexmap             = { version = "2", features = ["serde"] }
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true

[dev-dependencies]
serde_json.workspace = true
tempfile             = "3"
