[package]
categories             = ["web-programming::http-server", "cryptography"]
description            = "Cyphr Protocol authority server (MSS API)"
documentation          = "https://docs.rs/cyphr-server"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["server", "identity", "authentication", "cryptography"]
license-file.workspace = true
name                   = "cyphr-server"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[[bin]]
name = "cyphr-server"
path = "src/main.rs"

[dependencies]
axum.workspace               = true
clap.workspace               = true
coz.workspace                = true
cyphr                        = { path = "../cyphr", version = "0.1.0" }
cyphr-storage                = { path = "../cyphr-storage", version = "0.1.0" }
figment.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tower-http.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
