[package]
categories             = ["authentication", "cryptography"]
description            = "Cyphr self-sovereign identity protocol"
edition.workspace      = true
keywords               = ["identity", "authentication", "cryptography", "self-sovereign"]
name                   = "cyphr"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
coz        = { workspace = true }
indexmap   = { workspace = true }
malt       = { path = "../malt" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
test-fixtures = { path = "../test-fixtures" }
