[package]
categories             = ["authentication", "cryptography"]
description            = "Cyphrpass self-sovereign identity protocol"
edition.workspace      = true
keywords               = ["identity", "authentication", "cryptography", "self-sovereign"]
name                   = "cyphrpass"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
coz        = { workspace = true }
indexmap   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
