[package]
description            = "Test fixture types and generation for Cyphr integration testing"
edition.workspace      = true
name                   = "test-fixtures"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
coz.workspace       = true
cyphr               = { path = "../cyphr" }
cyphr-storage       = { path = "../cyphr-storage" }
indexmap.workspace  = true
serde.workspace     = true
serde_json          = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true
toml.workspace      = true
